# VanishTrans

./: .gitignore  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  start.bat  tailwind.config.js  vite.config.ts
docs/superpowers/plans/: 2026-07-14-vanishing-signal-redesign.md
docs/superpowers/specs/: 2026-07-14-vanishing-signal-redesign-design.md
src/: App.test.tsx  App.tsx  ScreenshotOverlay.test.tsx  ScreenshotOverlay.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  history.rs  keyboard.rs  lib.rs  main.rs  ocr.rs  tm.rs  translate.rs
src-tauri/src/setup/: clipboard_watch.rs  mod.rs  shortcuts.rs  tray.rs
src/assets/brand/: generate_tray.py
src/components/: AnimatedContent.tsx  AnimatedList.tsx  CharCounter.tsx  ClickSpark.tsx  GlowBorder.tsx  HotkeyEditor.tsx  IconButton.tsx  LanguageSwitcher.tsx  OverlayDrawer.tsx  SettingInput.tsx  SignalBurst.tsx  Typewriter.tsx
src/components/__tests__/: AnimatedList.test.tsx  CharCounter.test.tsx  GlowBorder.test.tsx  LanguageSwitcher.test.tsx  OverlayDrawer.test.tsx  Typewriter.test.tsx
src/components/brand/: VanishMark.tsx
src/features/: BallWindow.tsx  HistoryPanel.tsx  SettingsPanel.tsx  TmPanel.tsx  TranslatePanel.tsx
src/hooks/: useConfig.ts  useTauriEvents.ts  useTheme.ts  useTranslation.ts
src/hooks/__tests__/: useTheme.test.ts
src/layouts/: MainLayout.tsx
src/lib/: fileParser.test.ts  fileParser.ts
src/test/: setup.ts
